<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">  
   <RelativeLayout
    	android:layout_width="wrap_content"
    	android:layout_height="100dp"
    	android:fitsSystemWindows="false">
    <ImageView
    	android:id="@+id/welcomebanner"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/welcomebannernight"
        android:scaleType="centerCrop"/>
    <TextView
        android:id="@+id/welcometxt"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/welcome" 
	    android:textSize="50sp"
	    android:textColor="#FFF"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp" />
    </RelativeLayout>
    
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_1"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:clickable="false"
        card_view:contentPadding="5dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="3dp">
        
        <TextView
	       android:id="@+id/welcome"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/welcomecard" 
	       android:textSize="18sp"/>
    </android.support.v7.widget.CardView>
    
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_2"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:clickable="false"
        card_view:contentPadding="5dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="3dp">
        
        <ImageView
            android:id="@+id/swipe_icon"
            android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:src="@drawable/swipe"
            android:layout_gravity="left"/>
        <TextView
	       android:id="@+id/swipe"
	       android:paddingLeft="60dp"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/swipe" 
	       android:textSize="18sp"/>
        
    </android.support.v7.widget.CardView>
    
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_3"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:clickable="false"
        card_view:contentPadding="5dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="3dp">
        
        <TextView
	       android:id="@+id/design"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/design" 
	       android:textSize="18sp"/>
    </android.support.v7.widget.CardView>
    
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_4"
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_margin="5dp"
        android:clickable="false"
        card_view:contentPadding="5dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardElevation="3dp">
        
        <ImageView
            android:id="@+id/muzei_icon"
            android:layout_height="wrap_content"
            android:layout_width="60dp"
            android:src="@drawable/muzeiicon"
            android:layout_gravity="left"/>
        <TextView
	       android:id="@+id/muzei"
	       android:paddingLeft="60dp"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:text="@string/muzei_enable" 
	       android:textSize="18sp"/>
        
    </android.support.v7.widget.CardView>
    
</LinearLayout>
</ScrollView>